--- a/html/coding/assets/css/comm_notice.css
+++ b/html/coding/assets/css/comm_notice.css
@@ -129,21 +129,35 @@ comm__modify - 글수정
     font-weight: bold;
 }
 
-.table__top .right input {
+.comm__fieldset {
+    display: flex;
+    gap: 0.625rem;
+    margin-bottom: 0.625rem;
+}
+
+.comm__fieldset .blind {}
+
+.comm__fieldset>input {
+    width: 300px;
     padding: 0.7rem 1.5rem;
     border-radius: 0.3125rem;
     font-size: 1rem;
     font-family: var(--fontN);
-    border: 2px solid var(--pointColor);
+    color: var(--mainColor);
+    /* border: 2px solid var(--pointColor); */
 }
 
+/* .comm__fieldset>input::placeholder {
+    color: var(--mainColor);
+} */
+
 .table__top .right select {
-    padding: 0.6rem 1rem;
+    padding: 0.7rem 1.5rem;
     border-radius: 0.3125rem;
     color: var(--black700);
     font-size: 1rem;
     font-family: var(--fontN);
-    border: 2px solid var(--pointColor);
+    border: 0.125rem solid #fff;
 }
 
 .table__top .right .btns1 {
@@ -154,7 +168,7 @@ comm__modify - 글수정
     cursor: pointer;
     font-size: 1.125rem;
     font-family: var(--fontN);
-    border: 2px solid var(--mainColor);
+    border: 0.125rem solid var(--mainColor);
 }
 
 .table__top .right .btns2 {
@@ -171,16 +185,26 @@ comm__modify - 글수정
 /* table__board - 게시판 보드 */
 
 .table__board {
-    border-top: 0.1875rem solid var(--mainColor);
+    border-top: 2px solid var(--mainColor);
+    width: 100%;
+    background-color: #fff;
+    border-bottom: 2px solid var(--mainColor);
 }
+
 
 .table__board th {
     background-color: var(--pointColor);
 }
 
-.table__board th,
-.table__board td {
+.table__board th {
     border-bottom: 1px solid var(--mainColor);
+    padding: 0.9375rem 0.3125rem;
+    text-align: center;
+    color: var(--mainColor);
+}
+
+.table__board td {
+    border-bottom: 1px solid var(--pointColor);
     padding: 0.9375rem 0.3125rem;
     text-align: center;
 }
