--- a/html/coding/assets/css/editmember.css
+++ b/html/coding/assets/css/editmember.css
@@ -57,40 +57,43 @@
     color: var(--mainColor);
 }
 
-/* sign */
-#sign {
+/* edit */
+form#edit {
     max-width: 500px;
     margin: 0 auto;
+    background-color: var(--backgroundColor);
     padding: 20px;
-    border-radius: 8px;
-    /* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); */
+    border-radius: 10px;
 }
 
-.name,
-.password,
-.new-password,
-.confirm-password,
-.nickname,
-.running-style,
-.submit {
-    margin-bottom: 20px;
+/* edit__name */
+.edit__name {
+    margin-bottom: 30px;
+}
+
+.star {
+    color: var(--mainColor);
+}
+
+.input-text {
+    padding: 0.625rem 1.25rem;
+    width: 100%;
+    height: 3.125rem;
+    background-color: var(--pointColor);
+    color: var(--mainColor);
+    border-radius: 0.5rem;
 }
 
 .signname {
     margin-bottom: 8px;
     font-weight: bold;
+    font-size: 1rem;
+    color: #333;
 }
 
-input[type="text"].input-text,
-input[type="password"].input-text,
-textarea.input-textarea {
-    width: 100%;
-    padding: 10px;
-    border-radius: 4px;
-}
-
-textarea.input-textarea {
-    height: 60px;
+/* edit__password */
+.edit__password {
+    margin-bottom: 30px;
 }
 
 .nickname_wrap {
@@ -98,49 +101,82 @@ textarea.input-textarea {
     align-items: center;
 }
 
-.nickname_wrap input[type="text"].input-text {
+.nickname_wrap .input-text {
     flex: 1;
     margin-right: 10px;
 }
 
-button[type="button"] {
-    background-color: #ff6f3d;
-    color: #fff;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin: 5px 0 25px;
+.button-text {
+    padding: 0.625rem 1.25rem;
+    background-color: var(--mainColor);
+    color: var(--backgroundColor);
+    border-radius: 0.5rem;
+    height: 3.125rem;
 }
 
-button[type="submit"].dark {
-    width: 100%;
+/* edit__new-password */
+.edit__new-password {
+    margin-bottom: 30px;
 }
 
-.gender label,
-.running-style label {
+.button-text:hover {
+    background-color: #e64a19;
+}
+
+/* edit__confirm-password */
+.edit__confirm-password {
+    margin-bottom: 30px;
+}
+
+/* edit__nickname */
+.edit__nickname {
+    margin-bottom: 30px;
+}
+
+.edit__running-style {}
+
+.runwrap {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.edit__running-style input[type="checkbox"] {
+    display: none;
+    border-radius: 0.5rem;
+    color: #878787;
+}
+
+.edit__running-style label {
     flex: 1;
     text-align: center;
-    padding: 10px 20px;
-    border: 1px solid #ddd;
+    padding: 10px 0;
     border-radius: 4px;
     cursor: pointer;
     background-color: var(--pointColor);
     margin-right: 10px;
+    font-size: 1rem;
 }
 
-.gender input[type="radio"].input-radio,
-.running-style input[type="checkbox"].input-checkbox {
-    display: none;
+.edit__running-style label:last-child {
+    margin-right: 0;
 }
 
-.gender input[type="radio"].input-radio:checked+label,
-.running-style input[type="checkbox"].input-checkbox:checked+label {
-    background-color: var(--pointColor);
-    color: var(--mainColor);
-    border: none;
+.edit__running-style input[type="checkbox"]:checked+label {
+    background-color: var(--mainColor);
+    color: #fff;
 }
 
-.star {
-    color: var(--mainColor);
+button.dark {
+    padding: 0.625rem 1.25rem;
+    width: 100%;
+    height: 3.75rem;
+    background-color: var(--mainColor);
+    color: var(--backgroundColor);
+    border-radius: 0.5rem;
+    margin-top: 1.25rem;
+}
+
+button.dark:hover {
+    background-color: #e64a19;
 }
